11-Ingress/giropops-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: giropops-senhas
  name: giropops-senhas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: giropops-senhas
  template:
    metadata:
      labels:
        app: giropops-senhas
    spec:
      containers:
      - image: bebianc/linuxtips-giropops-senhas_semvelnerabi:7.0
        name: giropops-senhas
        env: # necessario para comunicar com o serviço REDIS
        - name: REDIS_HOST
          value: redis-service
        ports:
        - containerPort: 5000
        imagePullPolicy: IfNotPresent
