11-Ingress/ingress-giropops-aws.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / # pega o contexto /giropops-senhas e direciona para o / do container
spec:
  ingressClassName: nginx # necessario quando for um Ingress na Cloud
  rules:
  #- host: giropops-senhas.local # comentando o HOST para usar o DNS da AWS que gera automático
  - http:
      paths:
      - pathType: Prefix
        path: "/" # esse é o path correto que a aplicação giropops-senhas responde
        backend:
          service:
            name: giropops-senhas
            port: 
              number: 5000
