11-Ingress/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / # pega o contexto /giropops-senhas e direciona para o / do container
spec:
  rules:
  - host: giropops.nginx.local
    http:
      paths:
      - pathType: Prefix
        path: "/" # esse é o path correto que a aplicação giropops-senhas responde
        backend:
          service:
            name: nginx
            port: 
              number: 80
